syntax = "proto3";

package AFMsg; 

message PackMysqlParam
{
	string 		strRecordName 			= 1;
	string 		strKey 					= 2;
    string 		fieldVecList 			= 3;
	string 		valueVecList 			= 4;
	int64		bExit 	= 5;
	int64		nreqid 	= 6;
	int64 		nRet 			= 7;
	int64 		eType 			= 8;
}

message PackMysqlServerInfo
{
	int64 		nRconnectTime	= 1;
	int64 		nRconneCount	= 2;
    int64 		nPort 			= 3;
	string 		strDBName		= 4;
	string		strDnsIp 		= 5;
	string		strDBUser 		= 6;
	string 		strDBPwd		= 7;
	int64 		nServerID		= 8;
}
